--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+background-image: url(https://www.lunettesdepub.com/wp-content/uploads/2021/08/nyan-cat-gif-1.gif)
+
 body{
 	font-family: Verdana, Calibri, sans-serif; margin: 0px; padding: 0px; 
 }
